--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -15,6 +15,10 @@
     @apply w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto;
   }
 
+  footer {
+    @apply h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto;
+  }
+ 
   nav {
     @apply h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto;
   }
@@ -29,6 +33,10 @@
     @apply flex flex-col items-center justify-center h-screen overscroll-none w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto pb-12 bg-slate-100;
   }
 
+  .indexContainer {
+    @apply flex flex-col items-center justify-center h-screen overscroll-none w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto py-12 bg-slate-100;
+  }
+
   .containerTop {
     @apply flex flex-col items-start justify-center h-screen overscroll-none w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto pb-12 bg-slate-100;
   }
@@ -38,7 +46,7 @@
   }
 
   .profileContainerScroll {
-    @apply flex flex-col items-center justify-start overflow-y-auto w-full min-h-screen sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto bg-slate-100;
+    @apply flex flex-col items-center justify-start overflow-y-auto w-full h-screen pb-12 sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto bg-slate-100;
   }
 
   .formContainer {
@@ -47,6 +55,10 @@
 
   .navbar {
     @apply flex flex-row p-3 justify-between items-center w-full bg-blue-500 text-white shadow-md;
+  }
+
+  .footerNav {
+    @apply flex flex-row p-3 justify-between items-center w-full bg-slate-300 text-white shadow-md;
   }
 
   .profileNavbar {
