--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
@@ -6,14 +7,6 @@
     <link rel="stylesheet" href="/css/output.css" />
     <script src="/js/fadeAnimations.js" defer></script>
     <script src="/js/toggleTruncate.js" defer></script>
-    <style>
-      html, body {
-        height: auto;
-        min-height: 100%;
-        overflow-y: auto;
-        margin: 0;
-      }
-      </style>
   </head>
   <body>
     <header>
@@ -119,30 +112,57 @@
                 th:text="${#dates.format(collection?.updatedAt, 'MMMM-YYYY')}">
               </span>
             </div>
-            <!-- LOWER PROFILE BUTTONS -->
-            <div class="flex flex-row justify-center items-center">
-              <a
-                class="font-semibold text-xl text-blue-500 pr-2"
-                id="redirectAddCollectionItem"
-                th:href="@{/create-item/{collectionId}(collectionId=${collection.id})}"
-                >&#43;</a>
-            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="grid">
-      <div th:each="row : ${partitionedItems}" class="grid grid-cols-3">
-        <div th:each="item : ${row}" class="flex flex-col items-center">
-          <a th:href="@{/item/{id}(id=${item.id})}">
-            <img
-              th:src="${#strings.defaultString(item?.getImageUrl(), '/images/item_image.png')}"
-              alt="Item Image"
-              class="aspect-square w-full h-auto object-cover"
-            />
-          </a>
+    <div class="w-full min-h-fit overflow-hidden">
+      <div class="grid">
+        <div th:each="row : ${partitionedItems}" class="grid grid-cols-3">
+          <div th:each="item : ${row}" class="flex flex-col items-center">
+            <a th:href="@{/item/{id}(id=${item.id})}">
+              <img
+                th:src="${#strings.defaultString(item?.getImageUrl(), '/images/item_image.png')}"
+                alt="Item Image"
+                class="aspect-square w-full h-auto object-cover"
+              />
+            </a>
+          </div>
         </div>
       </div>
     </div>
+    <footer>
+      <div class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center">
+        <div class="footerNav">
+          <ul class="flex justify-between items-center w-full">
+            <li>
+              <div class="h-4 w-4 flex items-center justify-center">
+                <a class="text-2xl font-bold" href="/index">
+                  &#8962;
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="h-4 w-4 flex items-center justify-center">
+                <a
+                  class="text-2xl font-bold"
+                  th:href="@{/create-item/{collectionId}(collectionId=${collection.id})}"
+                  >&#43;
+                </a>
+              </div>
+            </li>
+            <li>
+              <a href="/profile">
+                <img
+                  class="h-7 w-7 rounded-full bg-white"
+                  th:src="${user != null && user.profilePictureUrl != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}"
+                  alt="Profile Picture"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
