--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -5,14 +5,6 @@
     <title>User Profile</title>
     <link rel="stylesheet" href="/css/output.css" />
     <script src="/js/fadeAnimations.js" defer></script>
-    <style>
-      html, body {
-        height: auto;
-        min-height: 100%;
-        overflow-y: auto;
-        margin: 0;
-      }
-      </style>
   </head>
   <body>
     <header>
@@ -151,7 +143,7 @@
           >
         </div>
       </div>
-      <div class="w-full h-full overflow-hidden">
+      <div class="w-full min-h-fit overflow-hidden">
         <div class="grid">
           <div th:each="row : ${partitionedCollections}" class="grid grid-cols-3">
             <div th:each="collection : ${row}" class="flex flex-col items-center">
@@ -169,5 +161,36 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center">
+        <div class="footerNav">
+          <ul class="flex justify-between items-center w-full">
+            <li>
+              <div class="h-4 w-4 flex items-center justify-center">
+                <a class="text-2xl font-bold" href="/index">
+                  &#8962;
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="h-4 w-4 flex items-center justify-center">
+                <a class="text-2xl font-bold" href="/create-collection">
+                  &#43;
+                </a>
+              </div>
+            </li>
+            <li>
+              <a href="/profile">
+                <img
+                  class="h-7 w-7 rounded-full bg-white"
+                  th:src="${user != null && user.profilePictureUrl != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}"
+                  alt="Profile Picture"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
