--- a/src/main/resources/templates/createCollection.html
+++ b/src/main/resources/templates/createCollection.html
@@ -85,6 +85,19 @@
             accept="image/*"
           />
 
+          <!-- Title Field -->
+          <div class="flex flex-col w-full h-auto justify-center items-between">
+            <div class="labelInputBox w-full">
+              <label class="label" for="title">Title:</label>
+              <input
+                class="input w-full"
+                type="text"
+                id="collectionTitle"
+                name="title"
+                placeholder="Title"
+              />
+            </div>
+
           <!-- Caption Field -->
           <div class="flex flex-col w-full h-auto justify-center items-between">
             <div class="labelInputBox w-full">
