--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -6,14 +6,9 @@
     <link rel="stylesheet" href="/css/output.css" />
     <script src="/js/fadeAnimations.js" defer></script>
     <script src="/js/toggleTruncate.js" defer></script>
-    <style>
-      html, body {
-        height: auto;
-        min-height: 100%;
-        overflow-y: auto;
-        margin: 0;
-      }
-      </style>
+    <script src="/js/toggleOverlay.js" defer></script>
+    <script src="/js/windowOpen.js" defer></script>
+
   </head>
   <body>
     <header>
@@ -22,7 +17,7 @@
           <li class="flex items-center">
             <a
               id="redirectCollection"
-              th:href="@{/collection/{collectionId}(collectionId=${collectionId})}">
+              th:href="@{/collection/{collectionId}(collectionId=${collection?.id})}">
               <span>&#8592;</span>
             </a>
           </li>
@@ -43,20 +38,20 @@
           <div class="flex justify-between items-center w-full">
             <ul class="flex justify-start items-center w-full">
               <li class="pr-2">
-                <a href="/profile">
+                <a th:href="@{/collection/{collectionId}(collectionId=${collection?.id})}">
                   <img
                     class="h-7 w-7 rounded-full bg-white"
-                    th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
+                    th:src="${collection?.imageUrl ?: '/item_image.png'}"
                     alt="Profile Picture"
                   />
                 </a>
               </li>
               <li>
-                <a href="/profile">
+                <a th:href="@{/collection/{collectionId}(collectionId=${collection?.id})}">
                   <span
                     class="text-sm font-semibold"
-                    th:if="${user?.username != null}"
-                    th:text="${user?.username}">
+                    th:if="${collection?.title!= null}"
+                    th:text="${collection?.title}">
                   </span>
                 </a>
               </li>
@@ -65,14 +60,53 @@
         </div>
         <!-- ITEM CONTENT -->
         <div class=" flex flex-col justify-center items-center">
-          <!-- ITEM PICTURE -->
-          <a>
-            <img
-              class="aspect-square w-full bg-white"
-              id="previewImage"
-              th:src="${item != null && item.imageUrl != null ? item.imageUrl : '/images/item_image.png'}"
-              alt="Item Image"/>
-          </a>
+          <div>
+
+            <div class="image-container relative">
+              <!-- Image -->
+              <a>
+                <img
+                  class="aspect-square w-full bg-white"
+                  id="previewImage"
+                  th:src="${item != null && item.imageUrl != null ? item.imageUrl : '/images/item_image.png'}"
+                  alt="Item Image"
+                />
+              </a>
+            
+              <!-- Overlay -->
+              <div id="itemOverlay" class="overlay absolute bottom-0 left-0 w-full h-full bg-black bg-opacity-70 text-white text-sm p-2 hidden">
+                <div class="flex flex-col justify-start items-between">
+                  <div>
+                    <span class="font-semibold" th:text="${item?.title}"></span>
+                  </div>
+                  <div>
+                    <span class="text-xs font-thin " th:text="${item?.description}"></span>
+                  </div>
+                </div>
+                <div>
+                  <button class="absolute bottom-2 left-2 bg-blue-500 hover:bg-blue-700 text-xs px-2 py-1 rounded"
+                  id="openLinkButton"
+                  th:href="${item?.itemLink}"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Item Link</button>
+                </div>
+              </div>
+            
+              <!-- Toggle Button -->
+              <button
+                id="toggleButtonShowInfo"
+                class="toggle-overlay absolute bottom-2 right-2 bg-white text-black text-xs px-2 py-1 rounded z-20"
+              >Show Info
+              </button>
+              <button
+                id="toggleButtonHideInfo"
+                class="toggle-overlay absolute bottom-2 right-2 bg-white text-black text-xs px-2 py-1 rounded z-20 hidden"
+              >Hide Info
+              </button>
+            </div>
+
+          
         <div class="w-full px-2">
           <div class="flex flex-row w-full h-auto py-1 text-sm">
             <ul class="flex flex-row justify-start items-center pr-2">
