--- a/src/main/resources/templates/createItem.html
+++ b/src/main/resources/templates/createItem.html
@@ -89,7 +89,47 @@
             required
           />
 
-          <!-- Caption Field -->
+          <!-- Title Field -->
+          <div class="flex flex-col w-full h-auto justify-center items-between">
+            <div class="labelInputBox w-full">
+              <label class="label" for="title">Title:</label>
+              <input
+                class="input w-full"
+                type="text"
+                id="itemTitle"
+                name="title"
+                placeholder="Title"
+              />
+            </div>
+
+          <!-- Description Field -->
+          <div class="flex flex-col w-full h-auto justify-center items-between">
+            <div class="labelInputBox w-full">
+              <label class="label" for="description">Description:</label>
+              <textarea
+                class="input w-full"
+                type="text"
+                id="description"
+                name="description"
+                placeholder="Description"
+                rows="6"
+              ></textarea>
+            </div>
+
+          <!-- Item Link Field -->
+          <div class="flex flex-col w-full h-auto justify-center items-between">
+            <div class="labelInputBox w-full">
+              <label class="label" for="itemLink">Item Link:</label>
+              <input
+                class="input w-full"
+                type="text"
+                id="itemLink"
+                name="itemLink"
+                placeholder="http://example.com"
+              />
+            </div>
+
+            <!-- Caption Field -->
           <div class="flex flex-col w-full h-auto justify-center items-between">
             <div class="labelInputBox w-full">
               <label class="label" for="caption">Caption:</label>
