--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
@@ -145,7 +146,7 @@
       </div>
       <div class="w-full min-h-fit overflow-hidden">
         <div class="grid">
-          <div th:each="row : ${partitionedCollections}" class="grid grid-cols-3">
+          <div th:each="row : ${partitionedCollections}" class="grid grid-cols-3 border-0">
             <div th:each="collection : ${row}" class="flex flex-col items-center">
               <a th:href="@{/collection/{id}(id=${collection.id})}">
                 <img
