--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -1231,6 +1231,8 @@ nav {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  background-color: white;
+  /* Set the background color */
 }
 
 .button {
@@ -1438,6 +1440,10 @@ nav {
   visibility: visible;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -1466,8 +1472,16 @@ nav {
   right: 0.5rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .z-20 {
   z-index: 20;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .col-span-1 {
@@ -1488,10 +1502,6 @@ nav {
 
 .m-10 {
   margin: 2.5rem;
-}
-
-.m-2 {
-  margin: 0.5rem;
 }
 
 .mx-auto {
@@ -1529,6 +1539,10 @@ nav {
   margin-top: 2rem;
 }
 
+.mt-12 {
+  margin-top: 3rem;
+}
+
 .flex {
   display: flex;
 }
@@ -1543,6 +1557,10 @@ nav {
 
 .aspect-square {
   aspect-ratio: 1 / 1;
+}
+
+.h-1\/2 {
+  height: 50%;
 }
 
 .h-12 {
@@ -1585,6 +1603,15 @@ nav {
   height: 100vh;
 }
 
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-64 {
+  height: 16rem;
+}
+
 .min-h-fit {
   min-height: -moz-fit-content;
   min-height: fit-content;
@@ -1620,6 +1647,10 @@ nav {
 
 .w-screen {
   width: 100vw;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .grid-cols-3 {
@@ -1680,6 +1711,10 @@ nav {
 
 .overflow-x-hidden {
   overflow-x: hidden;
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
 }
 
 .overscroll-none {
@@ -2028,6 +2063,14 @@ nav {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
@@ -2198,6 +2241,31 @@ nav {
   animation: fadeOut 0.5s ease-out forwards;
 }
 
+#commentBox {
+  transition: all 0.3s ease-in-out;
+  /* Smooth transition for toggling */
+}
+
+.hidden {
+  display: none;
+  /* Hide the comment box when not visible */
+}
+
+.fixed {
+  position: fixed;
+  /* Fix the comment box to the bottom of the screen */
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
+  /* Enable vertical scrolling */
+}
+
+.bg-white {
+  background-color: white;
+  /* Set the background color */
+}
+
 .invalid\:border-red-500:invalid {
   --tw-border-opacity: 1;
   border-color: rgb(239 68 68 / var(--tw-border-opacity, 1));
@@ -2286,6 +2354,7 @@ nav {
     width: 50%;
   }
 }
+
 
 
 
