--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -16,7 +16,7 @@
   }
 
   footer {
-    @apply h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto;
+    @apply h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto bg-slate-500;
   }
  
   nav {
@@ -50,6 +50,10 @@
 
   .profileContainerScroll {
     @apply flex flex-col items-center justify-start overflow-y-auto w-full h-screen sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto bg-slate-100;
+  }
+
+  .profileContainerNoScroll {
+    @apply flex flex-col items-center justify-start w-full h-screen sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto bg-slate-100;
   }
 
   .formContainer {
